--- a/hpa/guestbook-hpa.yml
+++ b/hpa/guestbook-hpa.yml
@@ -2,7 +2,7 @@ apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
   name: guestbook
-  namespace: app
+  namespace: app-prod
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
