--- a/ingress/guestbook-ingress.yaml
+++ b/ingress/guestbook-ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: frontend-ingress
-  namespace: app
+  namespace: app-prod
 spec:
   rules:
     - host: www.johnmops.com # get a free domain and use it
