--- a/pvc/redis-slave-pvc.yaml
+++ b/pvc/redis-slave-pvc.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: slave-pvc
-  namespace: app
+  namespace: app-prod
 spec:
   accessModes:
     - ReadWriteOnce
