--- a/service/guest-book-service.yaml
+++ b/service/guest-book-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: frontend
-  namespace: app
+  namespace: app-prod
   labels:
     app: guestbook
     tier: frontend
