--- a/service/redis-master-service.yaml
+++ b/service/redis-master-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: redis-master
-  namespace: app
+  namespace: app-prod
   labels:
     app: redis
     tier: backend
