--- a/service/redis-slave-service.yaml
+++ b/service/redis-slave-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: redis-slave
-  namespace: app
+  namespace: app-prod
   labels:
     app: redis
     tier: backend
